<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2025 Harry Timothy Tumalewa

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">SafeBox</string>

    <string name="playground_title">SafeBox Playground</string>
    <string name="playground_key_label">Key</string>
    <string name="playground_key_input_hint">Prefs key</string>
    <string name="playground_value_label">Value</string>
    <string name="playground_value_input_hint">Prefs value</string>
    <string name="playground_cta_get">Get</string>
    <string name="playground_cta_put">Put</string>
    <string name="playground_cta_clear">Clear</string>
    <string name="playground_cta_remove">Remove</string>
    <string name="playground_cta_commit">Commit</string>
    <string name="playground_cta_commit_label">Commit?</string>
    <string name="playground_cta_apply">Apply</string>
    <string name="playground_section_staged_entries">Staged Entries</string>

    <string name="playground_cleared_entry_text">Clear Triggered!</string>
    <string name="playground_entry_prefix_key">Key:\u00A0</string>
    <string name="playground_entry_prefix_value">Value:\u00A0</string>
    <string name="playground_entry_put_label">PUT</string>
    <string name="playground_entry_remove_label">REMOVE</string>
    <string name="playground_confirmation_dialog_title">Warning</string>
    <string name="playground_confirmation_dialog_message">This action will remove all staged entries. Proceed?</string>
    <string name="playground_confirmation_dialog_positive">Yes</string>
    <string name="playground_confirmation_dialog_negative">No</string>

    <string name="playground_error_missing_key">Key must not be empty!</string>
    <string name="playground_error_non_existent_key">Key %s does not exist!</string>
    <string name="playground_error_get_failed">Failed to get key: %s</string>
    <string name="playground_error_commit_failed">Failed to get key: %s</string>
    <string name="playground_error_no_staged_entry">Nothing to Apply/Commit. Please PUT some entries!</string>
    <string name="playground_success">Success!</string>
</resources>