<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2025 Harry Timothy Tumalewa

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/playground_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playground_key_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/et_key"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="@id/et_key" />

    <EditText
        android:id="@+id/et_key"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/playground_key_input_hint"
        android:hint="@string/playground_key_input_hint"
        android:includeFontPadding="false"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:lines="1"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/barrier_label"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/cta_get"
        android:layout_width="48dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_round_rectangle"
        android:text="@string/playground_cta_get"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/et_key"
        app:layout_constraintStart_toEndOf="@id/et_key"
        app:layout_constraintTop_toTopOf="@id/et_key" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_key_row"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_key,et_key,cta_get" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playground_value_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/et_value"
        app:layout_constraintStart_toStartOf="@id/tv_key"
        app:layout_constraintTop_toTopOf="@id/et_value" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_label"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tv_key,tv_value" />

    <EditText
        android:id="@+id/et_value"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/playground_value_input_hint"
        android:hint="@string/playground_value_input_hint"
        android:includeFontPadding="false"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:lines="1"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/barrier_label"
        app:layout_constraintTop_toBottomOf="@id/barrier_key_row" />

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/playground_cta_commit_label"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/cta_get"
        app:layout_constraintTop_toBottomOf="@id/barrier_key_row" />

    <Switch
        android:id="@+id/cta_commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_commit"
        app:layout_constraintStart_toStartOf="@id/tv_commit" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_value_row"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tv_value,et_value,cta_commit" />

    <Button
        android:id="@+id/cta_apply"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_round_rectangle"
        android:text="@string/playground_cta_apply"
        app:layout_constraintEnd_toEndOf="@id/et_value"
        app:layout_constraintStart_toStartOf="@id/et_value"
        app:layout_constraintTop_toBottomOf="@id/barrier_value_row" />

</androidx.constraintlayout.widget.ConstraintLayout>